--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,6 +73,7 @@ const withBase = (target: string) => {
       <a class="btn" href={withBase('plumber/')}>Plumber demo</a>
       <a class="btn" href={withBase('takeaway/')}>Takeaway demo</a>
       <a class="btn" href={withBase('security/')}>Security demo</a>
+      <a class="btn" href={withBase('drone/')}>Drone demo</a>
     </div>
   </section>
 </BaseLayout>
